compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__bit_arrays__negative_size_pattern_2.snap
---
source: compiler-core/src/javascript/tests/bit_arrays.rs
assertion_line: 1977
expression: "\npub fn go(x) {\n  case x {\n    <<n:signed, int:size(n)>> -> int\n    _ -> 2\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn go(x) {
  case x {
    <<n:signed, int:size(n)>> -> int
    _ -> 2
  }
}


----- COMPILED JAVASCRIPT
import { bitArraySliceToInt } from "../gleam.mjs";

export function go(x) {
  if (x.bitSize >= 8) {
    let n = bitArraySliceToInt(x, 0, 8, true, true);
    if (n >= 0) {
      if (x.bitSize === 8 + n) {
        let n$1 = n;
        let int = bitArraySliceToInt(x, 8, 8 + n$1, true, false);
        return int;
      } else {
        return 2;
      }
    } else {
      return 2;
    }
  } else {
    return 2;
  }
}
