compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__bit_arrays__operator_in_pattern_size2.snap
---
source: compiler-core/src/javascript/tests/bit_arrays.rs
expression: "\npub fn main() {\n  let assert <<len, payload:size(len / 8 - 1)>> = <<>>\n}\n"
---
----- SOURCE CODE

pub fn main() {
  let assert <<len, payload:size(len / 8 - 1)>> = <<>>
}


----- COMPILED JAVASCRIPT
import { makeError, divideInt, toBitArray, bitArraySliceToInt } from "../gleam.mjs";

const FILEPATH = "src/module.gleam";

export function main() {
  let $ = toBitArray([]);
  if ($.bitSize < 8 || $.bitSize !== 8 + (divideInt($.byteAt(0), 8)) - 1) {
    throw makeError(
      "let_assert",
      FILEPATH,
      "my/mod",
      3,
      "main",
      "Pattern match failed, no pattern matched the value.",
      { value: $, start: 19, end: 71, pattern_start: 30, pattern_end: 64 }
    )
  }
  let len = $.byteAt(0);
  let payload = bitArraySliceToInt($, 8, 8 + (divideInt(len, 8)) - 1, true, false);
  return $;
}
